# crunchyroll-stats

./: .gitignore  .tmp_history_numbered.txt  README.md  docker-compose.yml
.github/workflows/: build-check.yml  security-audit.yml
crunchyroll-stats-api/: .dockerignore  Cargo.toml  Dockerfile
crunchyroll-stats-api/src/: account.rs  auth.rs  cache.rs  history.rs  main.rs  models.rs  profile.rs  rate_limit.rs
crunchyroll-stats-api/src/models/: account.rs  history.rs  mod.rs  profile.rs
crunchyroll-stats-app/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
crunchyroll-stats-app/__tests__/api/: auth.test.ts  csrf.test.ts
crunchyroll-stats-app/__tests__/helpers/: fixtures.ts
crunchyroll-stats-app/__tests__/lib/: analytics.test.ts  chart-insights.test.ts  dashboard-insights.test.ts  utils.test.ts
crunchyroll-stats-app/src/app/: globals.css  layout.tsx  page.tsx
crunchyroll-stats-app/src/app/(protected)/: layout.tsx
crunchyroll-stats-app/src/components/: AuthenticatedAppProvider.tsx  BrandLogoIcon.tsx  DashboardInsightHeader.tsx  ExportButton.tsx  FilterBar.tsx  PersistentAuthenticatedNavbar.tsx  PetalCanvasBackground.tsx  ProtectedAppShell.tsx  StatsOverview.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TopNavMenu.tsx  WatchHistoryTable.tsx
crunchyroll-stats-app/src/lib/: analytics.ts  chart-insights.ts  csrf.ts  dashboard-insights.ts  media-type.ts  server-cache.ts  session.ts  utils.ts
crunchyroll-stats-app/src/types/: auth.ts  watch-history.ts
(+41 files in other folders)
