[package]
name = "crunchyroll-stats-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crunchyroll-rs = "0.13"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1