[package]
name = "crunchyroll-stats-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.13.0"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crunchyroll-rs = "0.16.0"
dotenvy = "0.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
log = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
validator = { version = "0.19", features = ["derive"] }
zeroize = { version = "1.8", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1